2007-08-31  Michael Stucki  <michael@typo3.org>

	* (trivial) Cleanup of NEWS.txt

2007-08-30  Ernesto Baschny  <ernst@cron-it.de>

	* (feature) Feature request #6237: Added hook to Web>Page "columns" view, allowing plugins to display "additional info" instead of "CODE:"

2007-08-30  Wolfgang Klinger  <wk@plan2.net>

	* (trivial) Extended the Workspace module access check with the User module access check

2007-08-28  Kasper Skaarhoj  <kasper2007@typo3.com>

	* Moving in workspaces + collateral
		- Implemented moving for elements ("Element" versions) in workspaces. Updated "Inside TYPO3" and "TYPO3 Core API". GENEROUS DONATIONS TO FINANCE THIS WORK ARE WELCOME since many of you need this feature!
		- Workspace "swapping" for "New"-placeholders and "Deleted"-Markers is now supported. Previously, both types would be published, not swapped. The change also means that effectively the difference between the value of "t3ver_state" being 1 or 2 is only cosmetic and the semantic depends on whether the field is set for a record being online or offline. TYPO3 core API is updated on the issue.
		- Refactored function for moving elements (t3lib_tcemain::moveRecord())
		- t3lib_BEfunc::workspaceOL() may now set the input variable $row (which is passed by reference) to false. The consequence is that code calling workspaceOL() should check if $row is still an array after calling the function. False is used if a version overlay with the move-id pointer is found in which case we would like a backend preview.
		- Added switch in TYPO3_CONF_VARS['BE']['elementVersioningOnly'] which allows to completely turn off page and branch versioning (which are deprecated for TYPO3 4.2+)
		- Added more tests for version integrity (centering around moving)
		- Added checkboxes and an action selector in the Workspace module for batch processing of elements.
		- Added "flush" command to TCEmain API for versions so versions can be completely deleted and not only released from a workspace.